ligolang/src/test/contracts/negative/error_type.ligo
// Test that PascaLIGO will reject a type declaration with improper value expression

const foo : nat = 42 + "bar"
